--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@sap/cds-hana": "^2",
         "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
         "@sap/xssec": "^3",
+        "axios": "^1.4.0",
         "express": "^4",
         "passport": "^0"
     },
@@ -19,7 +20,8 @@
         "undeploy": "cf undeploy MyHANAApp --delete-services --delete-service-keys --delete-service-brokers",
         "build": "rimraf resources mta_archives && mbt build --mtar archive",
         "deploy": "cf deploy mta_archives/archive.mtar --retries 1",
-        "watch-headeritem": "cds watch --open headeritem/webapp/index.html?sap-ui-xx-viewCache=false"
+        "watch-headeritem": "cds watch --open headeritem/webapp/index.html?sap-ui-xx-viewCache=false",
+        "watch-jsonread": "cds watch --open jsonread/webapp/index.html?sap-ui-xx-viewCache=false"
     },
     "cds": {
         "build": {
