--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "@sap/cds-hana": "^2",
         "@sap/cds-odata-v2-adapter-proxy": "^1.9.21",
         "@sap/xssec": "^3",
+        "@sapphirejs/filesystem": "^0.1.3",
         "axios": "^1.4.0",
         "express": "^4",
+        "jsonfile": "^6.1.0",
         "passport": "^0"
     },
     "scripts": {
