--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "undeploy": "cf undeploy MyHANAApp --delete-services --delete-service-keys --delete-service-brokers",
         "build": "rimraf resources mta_archives && mbt build --mtar archive",
         "deploy": "cf deploy mta_archives/archive.mtar --retries 1",
-        "watch-headeritem": "cds watch --open headeritem/webapp/index.html?sap-ui-xx-viewCache=false"
+        "watch-headeritem": "cds watch --open headeritem/webapp/index.html?sap-ui-xx-viewCache=false",
+        "watch-project1": "cds watch --open project1/webapp/index.html?sap-ui-xx-viewCache=false"
     },
     "cds": {
         "build": {
@@ -41,7 +42,7 @@
         }
     },
     "devDependencies": {
-        "@sap/ux-specification": "^1.108.11",
+        "@sap/ux-specification": "^1.108.12",
         "rimraf": "^3.0.2"
     }
 }
